Fixed small image overflow when resizing window past 1970px wide

--- a/frontend/src/components/SpotDetailsPage/SpotDetailsPage.css
+++ b/frontend/src/components/SpotDetailsPage/SpotDetailsPage.css
@@ -17,19 +17,10 @@ body {
   max-height: 500px;
 }
 
-.main-image-container {
-  /* border: 3px solid orange; */
-  /* width: 100%;
-  height: 100%;
-  max-height: 500px;
-  object-fit: cover; */
-  /* gap: 5px; */
-}
-
 .spot-details-main-image {
   object-fit: cover;
   width: 100%;
-  height: auto;
+  height: 100%;
   max-height: 500px;
   border-radius: 14px 0px 0px 14px;
 }
@@ -39,14 +30,15 @@ body {
   display: grid;
   grid-template: 1fr 1fr / 1fr 1fr;
   gap: 5px;
-  /* max-height: 500px; */
+  max-height: 500px;
 }
 
 .small-images {
   object-fit: cover;
   width: 100%;
-  height: auto;
+  height: 100%;
   max-height: 250px;
+  overflow: hidden;
 }
 
 
